文件读取方式修改