@@ -15,14 +15,16 @@ import HarnessPackOpti.ProjectInfoOutPut.ProjectCircuitInfoOutput;
 import java.io.BufferedWriter;
 import java.io.File;
 import java.io.FileWriter;
+import java.io.InputStream;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 
 public class main {
     public static void main(String[] args) throws Exception {
 
         //线束拓扑优化
-        File file = new File("F:\\office\\idearProjects\\project20251009\\src\\main\\resources\\优化测试后台记录.txt");
-        String jsonContent = new String(Files.readAllBytes(file.toPath()));//将文件中内容转为字符串
+        InputStream inputStream = main.class.getClassLoader().getResourceAsStream("优化测试后台记录.txt");
+        String jsonContent = new String(inputStream.readAllBytes(), StandardCharsets.UTF_8);
         HarnessBranchTopoOptimize harnessBranchTopoOptimize=new HarnessBranchTopoOptimize();
         harnessBranchTopoOptimize.topoOptimize(jsonContent);
         HarnessBranchTopoOptiErrorOutPut harnessBranchTopoOptiErrorOutPut=new HarnessBranchTopoOptiErrorOutPut();
